[package]
name = "lineark-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal codegen tool for lineark-sdk"
publish = false

[dependencies]
apollo-parser = "0.8"
prettyplease = "0.2"
syn = "2"
toml = "0.8"
proc-macro2 = "1"
quote = "1"
heck = "0.5"
