[package]
name = "lineark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for Linear issue tracker — for humans and LLMs"
readme = "README.md"

[dependencies]
lineark-sdk = { path = "../lineark-sdk", version = "0.0.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde_json = "1"
tabled = "0.17"
colored = "2"
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
uuid = "1"
percent-encoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
home = "0.5"
tempfile = "3"
test-with = { version = "0.15", default-features = false, features = ["runtime"] }
libtest-with = "0.8.1-13"

[[test]]
name = "cli_online"
harness = false
